--- a/electronicos.html
+++ b/electronicos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer type="module" src="main.js"></script>
+    <script defer type="module" src="electronicos.js"></script>
     <title>TiendaDiego</title>
     <!--Link a BootStrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -17,22 +17,22 @@
             <a class="navbar-brand" href="#">Tienda Diego</a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./ropaHombre.html">Ropa Hombre</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./ropaMujer.html">Ropa Mujer</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./joyeria.html">Joyas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./electronicos.html">Electrónica</a>
-                    </li>
-                    </ul>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./ropaHombre.html">Ropa Hombre</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./ropaMujer.html">Ropa Mujer</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./joyeria.html">Joyas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./electronicos.html">Electrónica</a>
+                </li>
+                </ul>
                 <form id="buscador" class="d-flex" role="search">
                 <input class="form-control me-2" 
                 type="search" 
@@ -54,10 +54,10 @@
     </header>
     
     <div id="bienvenidaDePágina">
-        <h2>¡Bienvenidos a la Tienda Oficial!</h2>
+        <h2>Electrónicos</h2>
     </div>
     <div id="mensajeDePagina">
-        <h3>Escoge de nuestro catálogo los productos que más te gusten, ¡y recíbelos en la comodidad de tu hogar!</h3>
+        <h3></h3>
     </div>
     <div id="espacioVacio"></div>    
     
