--- a/ropaHombre.html
+++ b/ropaHombre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer type="module" src="main.js"></script>
+    <script defer type="module" src="/ropaHombre.js"></script>
     <title>TiendaDiego</title>
     <!--Link a BootStrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -54,10 +54,10 @@
     </header>
     
     <div id="bienvenidaDePágina">
-        <h2>¡Bienvenidos a la Tienda Oficial!</h2>
+        <h2>Ropa de Hombre</h2>
     </div>
     <div id="mensajeDePagina">
-        <h3>Escoge de nuestro catálogo los productos que más te gusten, ¡y recíbelos en la comodidad de tu hogar!</h3>
+        <p></p>
     </div>
     <div id="espacioVacio"></div>    
     
